sros.pm: use file type debug command only for total memory and card type

--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -104,7 +104,7 @@ CMD:	if (/[#]\s?logout\s*$/) {
 sub BootLog {
     my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In BootLog: $_" if ($debug);
-    ProcessHistory("COMMENTS","keysort","F0","# $_");
+    #ProcessHistory("COMMENTS","keysort","F0","# $_");
 
     while (<$INPUT>) {
 	tr/\015//d;
@@ -115,16 +115,17 @@ sub BootLog {
 	return(-1) if (/minor: cli command not allowed for this user/i);
         # if file doesn't exist, return 0
         return(0) if (/minor: cli could not access file/i);
-	# context lines
-	/^\[]$/i && next;
-	/^INFO: CLI #\d+: Switching to the .* engine/ && next;
-	/file type bootlog/i && next;
 
-	/time from clock is/i && next;
-	/^(text:|executing|login:)/i && next;
-	/^File/i && next;
-	/[-=]+$/i && next;
-	/executed [0-9,]+ lines in [0-9.]+ seconds/i && next;
+	## context lines
+	#/^\[]$/i && next;
+	#/^INFO: CLI #\d+: Switching to the .* engine/ && next;
+	#/file type bootlog/i && next;
+
+	#/time from clock is/i && next;
+	#/^(text:|executing|login:)/i && next;
+	#/^File/i && next;
+	#/[-=]+$/i && next;
+	#/executed [0-9,]+ lines in [0-9.]+ seconds/i && next;
 
 	if (/total memory:\s+(\S+)\s+chassis type:\s+(\S+)\s+card type:\s+(\S+)/i) {
 	    next if ($memoryseen++);
@@ -134,7 +135,7 @@ sub BootLog {
 			   "#Card type: $3\n");
 	}
 
-	ProcessHistory("COMMENTS","keysort","F0","# $_");
+	#ProcessHistory("COMMENTS","keysort","F0","# $_");
     }
 }
 # This routine parses "show bof"
