--- a/bin/panlogin.in
+++ b/bin/panlogin.in
@@ -81,7 +81,14 @@ proc login { router user userpswd passwd cmethod cyphertype identfile } {
 		continue;
 	    }
 
-	    set commands [split $command \;]
+	    # handle escaped ;s in commands, and ;; and ^;
+	    regsub -all {([^\\]);} $command "\\1\u002;" esccommand
+	    regsub -all {([^\\]);;} $esccommand "\\1;\u002;" command
+	    regsub {^;} $command "\u002;" esccommand
+	    regsub -all {[\\];} $esccommand ";" command
+	    regsub -all {\u002;} $command "\u002" esccommand
+	    set sep "\u002"
+	    set commands [split $esccommand $sep]
 	    set num_commands [llength $commands]
 	    set rshfail 0
 	    for {set i 0} {$i < $num_commands && !$rshfail} { incr i} {
@@ -314,22 +321,17 @@ proc run_commands { prompt command } {
 
     expect *	; # throw away everything in the expect buffer
 
-    # Is this a multi-command?
-    if [ string match "*\;*" "$command" ] {
-	set commands [split $command \;]
-	set num_commands [llength $commands]
-	for {set i 0} {$i < $num_commands} { incr i} {
-	    set cmd [subst -nocommands [lindex $commands $i]]
-	    send "$cmd\r"
-	    expect {
-		-re "$cmd"	{}
-		-re "\[\n\r]+"			{ exp_continue }
-	    }
-	    # look for the next prompt
-	    expect "$reprompt"	{}
-	}
-    } else {
-	send "[subst -nocommands $command]\r"
+    # handle escaped ;s in commands, and ;; and ^;
+    regsub -all {([^\\]);} $command "\\1\u002;" esccommand
+    regsub -all {([^\\]);;} $esccommand "\\1;\u002;" command
+    regsub {^;} $command "\u002;" esccommand
+    regsub -all {[\\];} $esccommand ";" command
+    regsub -all {\u002;} $command "\u002" esccommand
+    set sep "\u002"
+    set commands [split $esccommand $sep]
+    set num_commands [llength $commands]
+    for {set i 0} {$i < $num_commands} { incr i} {
+	send -h -- "[subst -nocommands [lindex $commands $i]]\r"
 	expect {
 		-re "^\[^\n\r]*$reprompt"	{}
 		-re "^\[^\n\r ]*>>.*$reprompt"	{ exp_continue }
