--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -386,7 +386,7 @@ proc run_commands { prompt command } {
     # for the "More" prompt.  the extreme is equally obnoxious in pre-12.3 XOS,
     # with a global switch in the config.
     for {set i 0} {$i < $num_commands} { incr i} {
-	send -h -- "[subst -nocommands [lindex $commands $i]]\r"
+	send -- "[subst -nocommands [lindex $commands $i]]\r"
 	expect {
 	    -re "^\b+"				{ exp_continue }
 	    -re "^\[^\n\r *]*$reprompt"		{ send_user -- "$expect_out(buffer)"
@@ -681,7 +681,7 @@ foreach router [lrange $argv $i end] {
 				  set platform "extreme"
 				}
 	-re "^.+$reprompt"	{ set junk $expect_out(0,string);
-				  regsub -all "\[\]\[\(\)+]" $junk {\\&} prompt;
+				  regsub -all "\[\]\[\(\)\*+]" $junk {\\&} prompt;
 				}
     }
     if { $do_command || $do_script } {
