panlogin: move scripting mode and pager disabling from command list to panlogin to work-around complete-on-space {mis-}feature added around 8.1.4 - Erik Muller
http://www.shrubbery.net/pipermail/rancid-discuss/2018-October/010463.html

rancid@status:~$ rancid -t paloalto -d fw1.ams
loadtype: device type paloalto
loadtype: found device type paloalto in /home/erikm/rancidtest/etc/rancid.types.
base
executing panlogin -t 90 -c"set cli scripting-mode on;set cli pager off;show sys
tem info;show config running" fw1.ams
line: fw1.ams
line: spawn ssh -c aes256-ctr,aes192-ctr -x -l rancid fw1.ams
line: Password:
line: Last login: Fri Oct 26 20:04:51 2018 from 10.x.x.x
line: No entry for terminal type "network";
line: using dumb terminal settings.
line:
line: Number of failed attempts since last successful login: 0
line:
line:
line: rancid@fw1.ams(active)>
line: rancid@fw1.ams(active)>
line: rancid@fw1.ams(active)> set
line: rancid@fw1.ams(active)> set cli
line: rancid@fw1.ams(active)> set cli scripting-mode
line: rancid@fw1.ams(active)> set cli scripting-mode on
PROMPT MATCH: rancid@fw1.ams\(active\)[#>]
HIT COMMAND:rancid@fw1.ams(active)> set cli scripting-mode on

--- a/bin/panlogin.in
+++ b/bin/panlogin.in
@@ -455,12 +455,22 @@ foreach router [lrange $argv $i end] {
 				}
     }
 
+    # PAN-OS in interactive mode will send a newline and then redraw the
+    # whole prompt-and-command if you send a space.
+    if { $do_command || $do_script } {
+	set cmd "set cli scripting-mode on\r"
+	send $cmd
+	# ensure we eat the partial commands redrawn while entering the command
+	expect -re "$cmd.*$prompt"	{}
+	send "set cli pager off\r"
+	expect -re $prompt	{}
+    }
+
     if { $do_command } {
 	if {[run_commands $prompt $command]} {
 	    continue
 	}
     } elseif { $do_script } {
-	expect -re $prompt	{}
 	source $sfile
 	close
     } else {
