junos.pm: handle show chassis firmware bug for 11.x on EX - Wouter de Jong
The command to fail in rancid 3.x for this old stack, since a 'show chassis
firmware' on it returns the following :

rancid@AncientJuniperEX> show chassis firmware
fpc0:
--------------------------------------------------------------------------
error: the chassis-control subsystem is not running

fpc1:
--------------------------------------------------------------------------
Part                     Type       Version
FPC 0                    uboot      U-Boot 1.1.6 (Mar 28 2011 - 04:05:40) 1.0.0
                         loader     FreeBSD/PowerPC U-Boot bootstrap loader 2.4
FPC 1                    uboot      U-Boot 1.1.6 (Mar 28 2011 - 04:05:40) 1.0.0
                         loader     FreeBSD/PowerPC U-Boot bootstrap loader 2.4
FPC 2                    uboot      U-Boot 1.1.6 (Jun  5 2012 - 02:24:53) 1.0.0
                         loader     FreeBSD/PowerPC U-Boot bootstrap loader 2.4
FPC 3                    uboot      U-Boot 1.1.6 (Jun  5 2012 - 02:26:04) 1.0.0
                         loader     FreeBSD/PowerPC U-Boot bootstrap loader 2.4

fpc2:
--------------------------------------------------------------------------
error: the chassis-control subsystem is not running

fpc3:
--------------------------------------------------------------------------
Aborted! This command can only be used on the master routing engine.

{master:1}
rancid@AncientJuniperEX>


The reason this stack displays the error messages, seems to be that this old
Jun OS executes the command by default on all-members, instead of only on the
local (active RE) one, hence generating errors for the non-RE members.

If we execute the 'show chassis firmware local', the output is as expected
and rancid works fine.  However, in newer JunOS releases, the 'local' command
seems to have been phased out.

--- a/lib/junos.pm.in
+++ b/lib/junos.pm.in
@@ -20,6 +20,8 @@ $Exporter::Verbose=1;
 use rancid @VERSION@;
 
 our $ShowChassisSCB;			# Only run ShowChassisSCB() once
+our $ShowChassisFirmware;		# Only run ShowChassisFirmware() once
+
 
 @ISA = qw(Exporter rancid main);
 #our @EXPORT = qw($VERSION)
@@ -34,6 +36,7 @@ sub init {
     # add content lines and separators
     ProcessHistory("","","","#RANCID-CONTENT-TYPE: $devtype\n#\n");
 
+    $junos::ShowChassisFirmware = 0;
     0;
 }
 
@@ -185,10 +188,11 @@ sub ShowChassisFirmware {
     while (<$INPUT>) {
 	tr/\015//d;
 	last if (/^$prompt/);
-	return 1 if (/^aborted!/i);
+	return(1) if (/^aborted!/i);
 	next if (/^system (shutdown message from|going down )/i);
 	next if (/^\{(master|backup)(:\d+)?\}/);
 
+	return(0) if ($junos::ShowChassisFirmware);
 	/error: the chassis(-control)? subsystem is not r/ && return(-1);
 	/Couldn\'t initiate connection/ && return(-1);
 	/Unrecognized command/ && return(1);
@@ -198,6 +202,7 @@ sub ShowChassisFirmware {
 
 	ProcessHistory("","","","# $_");
     }
+    $ShowChassisFirmware = 1;
     return(0);
 }
 
