--- a/rancid/bin/a10login.in
+++ b/rancid/bin/a10login.in
@@ -318,7 +318,7 @@ proc run_commands { prompt command } {
 						  send -h "exit\r"
 						  exp_continue;
 						}
-	"Are you sure to quit"			{
+	"Are you sure .*to quit"		{
 						  catch {send "y\r"}
 						  exp_continue
 						}
