a10login: handle logout prompt variation for older ACOS - Wouter de Jong
ACOS 4.1.x :

hostname[1/1]#exit
hostname[1/1]>exit
Are you sure to quit (N/Y)?:

ACOS 2.7.x :

hostname[1/1]#exit
hostname[1/1]>exit
Are you sure you want to quit (N/Y)?:

--- a/bin/a10login.in
+++ b/bin/a10login.in
@@ -318,7 +318,7 @@ proc run_commands { prompt command } {
 						  send -h "exit\r"
 						  exp_continue;
 						}
-	"Are you sure to quit"			{
+	"Are you sure .*to quit"		{
 						  catch {send "y\r"}
 						  exp_continue
 						}
