--- a/rancid/lib/bigip.pm.in
+++ b/rancid/lib/bigip.pm.in
@@ -80,6 +80,23 @@ TOP: while(<$INPUT>) {
     }
 }
 
+# This routine parses a single command that returns no required info.  The
+# output is discarded.
+sub RunCommandTMSH {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+    print STDERR "    In RunCommandTMSH: $_" if ($debug);
+
+    while (<$INPUT>) {
+	tr/\015//d;
+	# Needed for when our prompt changes due to our executed command (for
+	# example, after executing 'cd /')
+	$prompt = ($_ =~ /^([^#]+#)/)[0];
+	$prompt =~ s/([][}{)(\\])/\\$1/g;
+	last if (/^$prompt/);
+    }
+    return(0);
+}
+
 # This routine parses "tmsh show /sys version"
 sub ShowVersion {
     my($INPUT, $OUTPUT, $cmd) = @_;
