dell.pm: powerconnect N[234]000 do not reliably echo the <CR> after exit - Wayne Eisenberg
http://www.shrubbery.net/pipermail/rancid-discuss/2018-December/010542.html

--- a/lib/dell.pm.in
+++ b/lib/dell.pm.in
@@ -62,7 +62,7 @@ sub inloop {
 TOP: while(<$INPUT>) {
 	tr/\015//d;
 	# XXX this match is not correct for DELL
-	if (/[>#]\s?exit$/) {
+	if (/[>#]\s?exit(?:$|Connection)/) {
 	    $clean_run = 1;
 	    last;
 	}
