--- a/rancid/lib/ciscowlc.pm.in
+++ b/rancid/lib/ciscowlc.pm.in
@@ -151,7 +151,7 @@ sub ShowSysinfo {
 	if (/^Number of Active Clients/) { $skipprocess = 1; }
 	if (/^OUI Classification Failure Count/) { $skipprocess = 1; }
 	if (/^(memory|cpu) (current|average)/i) { $skipprocess = 1; }
-	if (/^(internal|external) temperature/i) { $skipprocess=1; }
+	if (/^(mgig|internal|external) temperature/i) { $skipprocess=1; }
 	if (/rpm$/) { $skipprocess = 1; }
 
 	last if (/^$prompt/);
