--- a/rancid/lib/sros.pm.in
+++ b/rancid/lib/sros.pm.in
@@ -56,7 +56,8 @@ CMD:	if (/[#]\s?logout\s*$/) {
 	    $clean_run = 1;
 	    last;
 	}
-	if (/^Error:/ && ! /^Error: Invalid parameter\./) {
+	if (/^Error:/ &&
+	    !(/^Error: Invalid parameter\./ || /^Error: Bad command\./)) {
 	    print STDOUT ("$host clogin error: $_");
 	    print STDERR ("$host clogin error: $_") if ($debug);
 	    $clean_run = 0;
