clogin: new variation of username prompt - Wayne Eisenberg

--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -598,7 +598,7 @@ foreach router [lrange $argv $i end] {
     # Figure out prompts
     set u_prompt [find userprompt $router]
     if { "$u_prompt" == "" } {
-	set u_prompt "(\[Uu]sername|Login|login|user name|User):"
+	set u_prompt "(\[Uu]sername|\[Ll]ogin|\[Uu]ser \[Nn]ame|User):"
     } else {
 	set u_prompt [join [lindex $u_prompt 0] ""]
     }
