--- a/rancid/lib/arcos.pm.in
+++ b/rancid/lib/arcos.pm.in
@@ -201,6 +201,11 @@ TOP:
 	}
 	$comment = 0;
 
+	# prune tacacs/radius server keys
+	if (/^(\s+(tacacs|radius) secret-key\s)(\S+)/ && $filter_pwds >= 1) {
+	    ProcessHistory("","","","!$1 <removed>$'"); next;
+	}
+
 	# catch anything that wasnt matched above.
 	ProcessHistory("","","","$_");
     }
