various documentation updates/corrections - Nick Nauwelaerts

--- a/rancid/man/cloginrc.5.in
+++ b/rancid/man/cloginrc.5.in
@@ -11,8 +11,10 @@ contains configuration information for
 .BR alogin (1),
 .BR blogin (1),
 .BR clogin (1),
+.BR csblogin (1),
 .BR elogin (1),
 .BR flogin (1),
+.BR fnlogin (1),
 .BR hlogin (1),
 .BR htlogin (1),
 .BR jlogin (1),
