panos.pm: filter SNMP community strings & protocol encryption keys & correct comment character - Charles R Anderson

--- a/rancid/lib/panos.pm.in
+++ b/rancid/lib/panos.pm.in
@@ -152,6 +152,7 @@ sub ShowConfig {
 	if (/^(\s*snmp-community-string )[^ ;]+(\s?[;{])$/ && $filter_commstr) {
 	    $_ = "#$1<removed>$2\n";
 	}
+	# filter protocol encryption keys
 	if (/^(\s*key )[^ ;]+(\s?[;{])$/ && $filter_pwds >= 1) {
 	    $_ = "#$1<removed>$2\n";
 	}
